format and style page

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@ body {
 h1 {
     font-size: 4em;
     text-align: center;
-    color: grey;
+    color: navy;
+font: italic small-caps bold 70px Georgia, Garamond, serif;
 }
 
 h2 {
     font-size: 2.5em;
     text-align: center;
     color: grey;
+font: italic small-caps bold 40px Georgia, Garamond, serif;
 }
 h3 {
     font-size:1.5em;
@@ -39,10 +41,10 @@ text-align:center;
 
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 5px;
+    padding: 5px;
     overflow: hidden;
-    border: none;
+    border: 2px solid black;
     background-color: #EDEBEB;
 }
 
@@ -51,21 +53,22 @@ li {
 }
 
 li a {
-    font-size: 2.2em;
+    font-size: 2em;
     display: block;
-    color: green;
+    color: grey;
     text-align: center;
-    padding: 18px 20px;
+    padding: 14px 16px;
     text-decoration: none;
+font: italic small-caps bold 30px Georgia, Garamond, serif;
 }
 
 li a:hover:not(.active) {
-    background-color: #EDEBEB;
+    background-color: lightblue;
 }
 
 li a.active {
     color: green;
-    background-color: ##EDEBEB;
+    background-color: lightblue;
 }
 
 
@@ -77,23 +80,23 @@ li a.active {
 <br>
 
 <ul>
-<li style="width:50%"><a id="colorType" href="https://wackypanda.github.io/features">Home</a></li>
-  <li style="float:right;width:50%;"><a id="colorType" href="https://wackypanda.github.io/editorschoice">Photos</a></li>
+<li style="width:50%"><a id="colorType" href="https://chriswendrowski.github.io/">Home</a></li>
+  <li style="float:right;width:50%;"><a id="colorType" href="https://chriswendrowski.github.io/photos">Photos</a></li>
 </ul>
 
 <body style="background-color:#EDEBEB;">
 	
 <br>
+<br>
+<br>
+<br>
+<br>
 
-<center>
-<img src="WackyPandaLogo1.png" alt="Logo" style="width:30em;height:30em;">
-</center>
 
+<h1 align="center">Chris Wendrowski</h1>
 
-<h1 align="center"></h1>
-<h2 align="center"></h2>
-<p align="center"><em>Chris Wendrowski Photography</em></p>
-<p align="center"><sup> Welcome! </sup></p>
+<br>
+<h2 align="center"> - <i>Photography</i> - </h2>
 </body>
 
 </html>
