fix photos link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ li a.active {
 
 <ul>
 <li style="width:50%"><a id="colorType" href="https://chriswendrowski.github.io/">Home</a></li>
-  <li style="float:right;width:50%;"><a id="colorType" href="https://chriswendrowski.github.io/photos">Photos</a></li>
+  <li style="float:right;width:50%;"><a id="colorType" href="https://chriswendrowski.github.io/photos/">Photos</a></li>
 </ul>
 
 <body style="background-color:#EDEBEB;">
