add in some photos

--- a/photos/index.html
+++ b/photos/index.html
@@ -14,7 +14,7 @@ h1 {
     font-size: 4em;
     text-align: center;
     color: navy;
-font: italic small-caps bold 70px Georgia, Garamond, serif;
+font: italic small-caps bold 40px Georgia, Garamond, serif;
 }
 
 h2 {
@@ -33,6 +33,8 @@ p {
 	text-align: center;
 	font-weight: bold;
 	color: black;
+font: italic small-caps bold 15px Georgia, Garamond, serif;
+
 }
 #centerThat{
 margin:auto;
@@ -71,6 +73,13 @@ li a.active {
     background-color: lightblue;
 }
 
+#photo {
+margin:auto;
+text-align:center;
+}
+
+
+
 
 </style>
 </head>
@@ -89,14 +98,27 @@ li a.active {
 <br>
 <br>
 <br>
+<h1 align="center">Photos</h1>
 <br>
 <br>
 
 
-<h1 align="center">Chris Wendrowski 2</h1>
+<br>
+<center>
+<img src="coleGolf1.JPG" alt="photo" style="width:30em;height:20em;">
+</center>
+<p>Go Jags!</p>
+<br>
 
 <br>
-<h2 align="center"> - <i>Photography</i> - </h2>
+<center>
+<img src="coleGolf2.JPG" alt="photo" style="width:30em;height:20em;">
+</center>
+<p>The greatest game ever played</p>
+<br>
+
+
+
 </body>
 
 </html>
