--- a/photos/index.html
+++ b/photos/index.html
@@ -116,6 +116,13 @@ text-align:center;
 </center>
 <p>The greatest game ever played</p>
 <br>
+	
+<br>
+<center>
+<img src="dadSmiling.jpeg" alt="photo" style="width:40em;height:30em;">
+</center>
+<p>Happy days on the boat!</p>
+<br>
 
 
 
