--- a/photos/index.html
+++ b/photos/index.html
@@ -119,7 +119,7 @@ text-align:center;
 	
 <br>
 <center>
-<img src="dadSmiling.jpeg" alt="photo" style="width:40em;height:30em;">
+<img src="dadSmiling.JPG" alt="photo" style="width:40em;height:30em;">
 </center>
 <p>Happy days on the boat!</p>
 <br>
