--- a/index.html
+++ b/index.html
@@ -2,101 +2,25 @@
 <html lang="en-US">
 
   <head>
-    		<title>Chris Wendrowski Photography</title>
-		<meta charset="utf-8">
+    	<title>Chris Wendrowski Photography</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
   </head>
-<style>
-body {
-    font-size: 100%;
-}
-
-h1 {
-    font-size: 4em;
-    text-align: center;
-    color: navy;
-font: italic small-caps bold 70px Georgia, Garamond, serif;
-}
-
-h2 {
-    font-size: 2.5em;
-    text-align: center;
-    color: grey;
-font: italic small-caps bold 40px Georgia, Garamond, serif;
-}
-h3 {
-    font-size:1.5em;
-    color: gray;
-}
-
-p {
-    font-size: 2.5em;
-	text-align: center;
-	font-weight: bold;
-	color: black;
-}
-#centerThat{
-margin:auto;
-text-align:center;
-}
-
-ul {
-    list-style-type: none;
-    margin: 5px;
-    padding: 5px;
-    overflow: hidden;
-    border: 2px solid black;
-    background-color: #EDEBEB;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    font-size: 2em;
-    display: block;
-    color: grey;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-font: italic small-caps bold 30px Georgia, Garamond, serif;
-}
-
-li a:hover:not(.active) {
-    background-color: lightblue;
-}
-
-li a.active {
-    color: green;
-    background-color: lightblue;
-}
-
-
-</style>
-</head>
 
 <body>
+    <br>
+    <ul>
+        <li><a id="colorType" href="https://chriswendrowski.github.io/">Home</a></li>
+        <li><a id="colorType" href="https://chriswendrowski.github.io/photos/">Photos</a></li>
+    </ul>	
+    <br><br><br><br><br>
 
-<br>
+    <h1>Chris Wendrowski</h1>
 
-<ul>
-<li style="width:50%"><a id="colorType" href="https://chriswendrowski.github.io/">Home</a></li>
-  <li style="float:right;width:50%;"><a id="colorType" href="https://chriswendrowski.github.io/photos/">Photos</a></li>
-</ul>
+    <br>
 
-<body style="background-color:#EDEBEB;">
-	
-<br>
-<br>
-<br>
-<br>
-<br>
+    <h3 > - <i>Photography</i> - </h3>
 
-
-<h1 align="center">Chris Wendrowski</h1>
-
-<br>
-<h2 align="center"> - <i>Photography</i> - </h2>
 </body>
 
 </html>
